tweaked fulltable, fixed button text change

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
  					</div>
  					<!-- the following div tableblock is only for styling table together with accompanying footer -->
 					<!-- table is part of the leftcolumn page 1 article content -->
+					<div id ='position'>
 					<div id="tableblock">
 					<button type="button" id="viewtable"> click to view fullpage table </button>
 					<table>
@@ -76,6 +77,7 @@
 		 				<p> altitude from <a href="http://whatismyelevation.com">whatsmyelevation</a></p>
 		 			</footer>
 					</div>
+					</position>
 		 		</article>	
 		 	</section>
  			<section id="centercol">
