got the fade in working as I like

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="https://use.fontawesome.com/8b1c1f159f.js"></script>
 	</head>
 	<body id="homepage">
+		<div id="container">
 		<header>
 			<!-- for screenreaders that are not up-to-date and for the purposes of the course requirements -->
 			<nav role="navigation">
@@ -232,5 +233,6 @@
 					  	margin-bottom: 3em;
 					  }
 			</style>
+		</div><!--end container-->
 	</body>
 </html>
