--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 		<script src="https://use.fontawesome.com/8b1c1f159f.js"></script>
 	</head>
 	<body id="homepage">
+		<div id="welcome">welcome to my project</div>
 		<div id="container">
+
+		
 		<header>
 			<!-- for screenreaders that are not up-to-date and for the purposes of the course requirements -->
 			<nav role="navigation">
