added select a topic

--- a/index.html
+++ b/index.html
@@ -86,23 +86,31 @@
 		 	</section>
  			<section id="centercol">
 	 			<article>
-		 			<h2>What was my trip to Tibet like?</h2>
-	     			<section>
+		 			<h2>Select a topic about my trip</h2>
+		 			<select id = "tripvibe">
+		 				<option value="weather">weather</option>
+		 				<option value="people">people</option>
+		 				<option value="sights">sights</option>
+		 				<option value="food">food</option>
+		 			</select>
+		 			<div id="display">
+		 			</div>
+	     			<section id="weather">
 						<h3>weather</h3>
 						<p>Like in Pittsburgh, in <a href="http://www.chinahighlights.com/lhasa/weather/january.htm">January in Lhasa</a> it was winter too, so it was fairly cold, though not that much colder during the day.  There wasn’t any snow.  I packed light, and didn’t bring a heavy jacket, so I was pretty cold.  The high daily temperature was about 35-40 degrees Fahrenheit, but it was much colder early in the morning and late at night.
 						</p>
 					</section>
-					<section>
+					<section id="people">
 						<h3>People</h3>
 						<p>The people were a mix of ethnic Tibetans and Chinese.  I didn’t get to observe the people much other than to just see them going about their daily business  There were many Chinese police around to keep watch on everything.  It was not the tourist season, so I was one of the few Westerners around.  It coincided with pilgrimage, so there will pilgrims from far away.
 						</p>
 					</section>
-					<section>
+					<section id="sights">
 						<h3> the sights </h3>
 						<p>Chinese culture is definitely modernizing Lhasa, and the main strips have a small city feel, though there are not any very tall buildings.  It was therefore not overall the image I had in mind of it, which was an image or a less modern society.  There are a few older historical parts of Lhasa that preserve more of the old-fashioned traditional feel.  The monasteries and temples are mostly either museums now, or are have parts that are active but are also  museums or tourist sites at the same time.
 						</p>
 					</section>
-					<section>
+					<section id="food">
 						<h3>The food</h3>
 						<p>A very popular food are <dfn><a href="http://food.ndtv.com/food-drinks/the-story-of-momos-what-makes-this-tibetan-dumpling-so-popular-1397480">momos</a></dfn>, a type of dumpling, often filled with meat.  The ones I had were filled with yak meat.  The noodle soup I had for breakfast also included yak meat.  Yak meat is very prevalent.  It is the most popular meat, kind of the equivalent of beef, but without the competition that beef has in the United States.  Tibetans are very reliant upon it.  Another traditional breakfast is barley porridge, which I gave a pass. There were some dishes available with vegetables including potatoes, but i was left with the impression that noodles, dumplings, soup, and yak were the main staples.  Unfortunately, time was short and on this trip I didn’t have any butter tea ... a preparation of tea which is made with, you guessed it, yak butter.
 						</p>
