added centercol image on change

--- a/index.html
+++ b/index.html
@@ -37,15 +37,14 @@
 					<h2> Trip to Tibet Introduction</h2>
 					<!-- this div styles the intro content in left content into 3 columns completely contained within the left column -->
 					<div id="columncount">
-						<p> In January 2016, I went solo on a 3-day trip to <a href="https://www.travelchinaguide.com/cityguides/tibet/lhasa/">Lhasa, Tibet</a>.  Tibet is a place I had always had a fascination with and wanted to visit since I was a child.  </p>
-						<p>It’s definitely worth more than a 3 day trip, but my available time was short and I didn’t want to let that stop me.</p>
-						<p>  The distance from my town of Pittsburgh, Pennsylvania to Lhasa, Tibet is 7,556 miles.  I wasn't going to let that stop me either.</p>
- 						<p>Lhasa is actually only the 2nd most distant place I've been to.  I've also been to <a href="https://www.lonelyplanet.com/nepal/kathmandu">Kathmandu, Nepal</a>, which is further (7629 miles), on another trip. That's a long way, but its stil less than 1/3 of the way completely around the world. </p>
+						<p> In January 2016, I went solo on a 3-day trip to <a href="https://www.travelchinaguide.com/cityguides/tibet/lhasa/">Lhasa, Tibet</a>.  </p>
+						 
+						<p>  The distance from my town of Pittsburgh, Pennsylvania to Lhasa, Tibet is 7,556 miles.</p>
+ 						<p>Lhasa is actually only the 2nd most distant place I've been to.  I've also been to <a href="https://www.lonelyplanet.com/nepal/kathmandu">Kathmandu, Nepal</a>, which is further (7629 miles), on another trip.  </p>
 						<p>  Lhasa is the site of a number of historic <a href="itinerary.html#temples">monasteries and temples</a>.  It's one of the few large cities in Tibet but it's a small city by American standards.  It's more equivalent to a large town.</p>
-						<p>To travel there is not an easy trip.  From my town of Pittsburgh, Pennsylvania, the quickest you can do the trip to Lhasa is in about 30 hours of travel (one-way).  There are no direct flights fromthe United States. </p>
-						<p>As you might imagine, it's also a very expensive trip (more than I really should be splurging on).</p>
- 						<p> I expected Lhasa to have retained more of the traditional Tibetan vibe that I had my head, the exotic image that had played in my head for years.  So, at first I was a little disillusioned by all of the modernization and development. </p> <p>However, it still has historical sites and 
- 						old-town areas such as  <a href="itinerary.html#bharkor">Barkhor Square</a> that were similar to what I dreamed of.  The trip was challenging for a solo traveller and it wasn't everything I had hoped, but for me it was a must-do.  I'm glad I went.</p>
+						<p>From my town of Pittsburgh, Pennsylvania, the quickest you can do the trip to Lhasa is in about 30 hours of travel (one-way).  There are no direct flights from the United States. </p>
+					 
+ 						<p> Though Lhasa is modernizing,it still has historical sites and old-town areas such as  <a href="itinerary.html#bharkor">Barkhor Square</a> The trip was challenging for a solo traveller.  </p>
  					</div>
  					<!-- the following div tableblock is only for styling table together with accompanying footer -->
 					<!-- table is part of the leftcolumn page 1 article content -->
@@ -114,7 +113,7 @@
 						<h3>The food</h3>
 						<p>A very popular food are <dfn><a href="http://food.ndtv.com/food-drinks/the-story-of-momos-what-makes-this-tibetan-dumpling-so-popular-1397480">momos</a></dfn>, a type of dumpling, often filled with meat.  The ones I had were filled with yak meat.  The noodle soup I had for breakfast also included yak meat.  Yak meat is very prevalent.  It is the most popular meat, kind of the equivalent of beef, but without the competition that beef has in the United States.  Tibetans are very reliant upon it.  Another traditional breakfast is barley porridge, which I gave a pass. There were some dishes available with vegetables including potatoes, but i was left with the impression that noodles, dumplings, soup, and yak were the main staples.  Unfortunately, time was short and on this trip I didn’t have any butter tea ... a preparation of tea which is made with, you guessed it, yak butter.
 						</p>
-					</section>
+					</section>		 
 				</article>
 			</section>
 			<div id="rightcol">
