added image scale on 2nd column

--- a/index.html
+++ b/index.html
@@ -84,14 +84,22 @@
 		 		</article>	
 		 	</section>
  			<section id="centercol">
+ 				<div class="bgcontainer">
 	 			<article>
-		 			<h2>Select a topic about my trip</h2>
+	 				<div id="style2ndcolbar"> 
+		 			<h2>Vacation topics:  </h2>
+		 			<form>
 		 			<select id = "tripvibe">
+		 			<optgroup>
+		 				<option selected>choose one</option>
 		 				<option value="weather">weather</option>
 		 				<option value="people">people</option>
 		 				<option value="sights">sights</option>
 		 				<option value="food">food</option>
+		 				</optgroup>
 		 			</select>
+		 			 </form>
+		 			 </div>
 		 			<div id="display">
 		 			</div>
 	     			<section id="weather">
@@ -115,6 +123,7 @@
 						</p>
 					</section>		 
 				</article>
+				</div>
 			</section>
 			<div id="rightcol">
 				<h2> sidebar</h2>
