--- a/index.html
+++ b/index.html
@@ -126,20 +126,20 @@
 				</div>
 			</section>
 			<div id="rightcol">
-				<h2> sidebar</h2>
+				<h2> ORDER TIBETAN FOOD</h2>
  				<aside>
 
 					<form id="userinfo" novalidate action="" method=""> 
 
 					<fieldset>
-					<legend>legend=who are you</legend>
+					<legend></legend>
 					 
 
 						<!-- add labels, instead of naked text descript -->
 						<label for ="name">your name</label>
 						 <input type="text" placeholder="ENTER FIRST NAME" id="name" name="name" aria-required="true" autofocus></input> 
 						 <div id="nameerror"><br></div>
-						 <label for = "title" id="titlelab" aria-required="false">add adjective? yes </label>
+						 <label for = "title" id="titlelab" aria-required="false">add aasgsag? yes </label>
 						 <input type="checkbox" name="title" id="title" value="yes"></input><br>
 						<p id="question">what type of guy are you</p>
 						<label>
