delay on canvas load for anim

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				<a href="#pg1maincontent" class="sronly">skip to main content</a>
 				<ul>
 				 	<li> <a href="index.html"><i class="fa fa-home" aria-hidden='true'></i>Home</a> </li>
-				 	<li> <a href="canvas.html">canvas</a></li>
+				 	<li> <a id="linkeffect" href="canvas.html">canvas</a></li>
+				 	<!--<li> <a href="canvas.html">canvas</a></li>-->
 					<li> <a href="itinerary.html">itinerary</a> </li>
 				</ul>
 			</nav>
@@ -88,15 +89,15 @@
 	 			<article>
 	 				<div id="style2ndcolbar"> 
 		 			<h2>Vacation topics:  </h2>
-		 			<form>
+		 			<form id="test">
 		 			<select id = "tripvibe">
-		 			<optgroup>
+		 			 
 		 				<option selected>choose one</option>
 		 				<option value="weather">weather</option>
 		 				<option value="people">people</option>
 		 				<option value="sights">sights</option>
 		 				<option value="food">food</option>
-		 				</optgroup>
+		 				 
 		 			</select>
 		 			 </form>
 		 			 </div>
@@ -125,7 +126,7 @@
 				</article>
 				</div>
 			</section>
-			<div id="rightcol">
+			<section id="rightcol">
 				<h2> ORDER TIBETAN FOOD</h2>
  				<aside>
 
@@ -215,7 +216,7 @@
 					</figure>
 					<p> The temple is a major historical site in Lhasa, Tibet</p>
 				</article>
-			</div>
+			</section>
 		</main>
  		<footer id="pagefooter">
  			<!-- footer is overflow:auto to clear its children-->
