added instructions, rounded some canvas page corners

--- a/canvas.html
+++ b/canvas.html
@@ -38,6 +38,8 @@
 
     <!-- start canvas game demo/animation section -->
     <div id="animwriter">
+      
+      <p id="instructions"> Just a demo.  Choose your character.  Maneuver with keyboard arrow keys.  Visit the labelled locations on the canvas to see the result. </p>
       <header>
       <label for ="character" id="selectmessage">select your character shape</label>
        
