email form is working

--- a/canvas.html
+++ b/canvas.html
@@ -72,9 +72,9 @@
       	   <input type='email' id='emailrecipient' placeholder='recipient address' required>
            <input type='text' id='emailsubject' placeholder='subject'>
            <textarea id="emailmessage" placeholder='your message here'> </textarea>
-           <!--<a id="emailsend" href="mailto:">send</a>
-           -->
-           <button>send email</button>
+          <a id="emailsend" href="mailto:">send</a>
+         
+            <!--<button>send email</button>  -->
            
  
       	</form>
